--- a/var/www/package.json
+++ b/var/www/package.json
@@ -31,6 +31,8 @@
   "dependencies": {
     "@ag-grid-community/client-side-row-model": "^26.0.0",
     "@ag-grid-community/vue3": "^26.0.0",
+    "@baloise/vue-axios": "^1.3.2",
+    "@baloise/vue-keycloak": "^1.5.0",
     "@coreui/chartjs": "^3.0.0",
     "@coreui/coreui": "^4.1.0",
     "@coreui/icons": "^2.1.0",
@@ -49,6 +51,8 @@
     "jquery": "^3.6.0",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.5.23",
+    "jwt-decode": "^3.1.2",
+    "keycloak-js": "^12.0.1",
     "pdfmake": "^0.2.4",
     "vue": "^3.2.23",
     "vue-router": "^4.0.12",
