--- a/var/www/package.json
+++ b/var/www/package.json
@@ -48,6 +48,7 @@
     "ag-grid-community": "^25.3.0",
     "ag-grid-vue3": "^25.3.1",
     "core-js": "^3.19.0",
+    "cors": "^2.8.5",
     "jquery": "^3.6.0",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.5.23",
