--- a/rest/composer.json
+++ b/rest/composer.json
@@ -1,6 +1,7 @@
 {
 	"require": {
 		"slim/slim": "3.*",
-		"eko3alpha/slim-cors-middleware": "^1.1"
+		"eko3alpha/slim-cors-middleware": "^1.1",
+		"mongodb/mongodb": "^1.8"
 	}
 }
