--- a/httpd-php/dockerfile
+++ b/httpd-php/dockerfile
@@ -7,9 +7,8 @@ EXPOSE 80
 COPY ./apache2.conf /etc/apache2/sites-available/my-site.conf
 
 RUN apt-get update \ 
-&& apt-get install -y composer apache2 php7.4 php7.4-mongodb php7.4-mysql php7.4-redis php7.4-curl\
+&& apt-get install -y composer apache2 php7.4 php7.4-mongodb php7.4-mysql php7.4-redis php7.4-curl dnsutils\
 && apt-get clean \
-&& composer install \
 && a2dissite 000-default \
 && a2enmod rewrite \
 && a2enmod headers \
