--- a/dev/master/compose.yml
+++ b/dev/master/compose.yml
@@ -14,21 +14,25 @@ services:
     volumes:
       - /srv/dev/manager/mariadb/data:/var/lib/mysql
       - /srv/dev/manager/mariadb/config:/etc/mysql
+    restart: unless-stopped
   company-cache:
     image: redis:7
     container_name: master_company-cache
     networks:
       - master
+    restart: unless-stopped
   group-cache:
     image: redis:7
     container_name: master_group-cache
     networks:
       - master
+    restart: unless-stopped
   api-cache:
     image: redis:7
     container_name: master_api-cache
     networks:
       - master
+    restart: unless-stopped
   mongodb:
     image: mongo:5.0
     container_name: master_mongodb
@@ -40,6 +44,7 @@ services:
     volumes:
       - /srv/dev/manager/mongo/data:/data/db
       - /srv/dev/manager/mongo/config:/data/configdb
+    restart: unless-stopped
   test_client-mongodb:
     image: mongo:5.0
     container_name: 202979fda92402efd25f47c0f4176a74_mongodb
@@ -51,6 +56,7 @@ services:
     volumes:
       - /srv/dev/manager/test_client_mongo/data:/data/db
       - /srv/dev/manager/test_client_mongo/config:/data/configdb
+    restart: unless-stopped
   api:
     image: registry.sexycoders.org/master-api:1
     container_name: master_api
@@ -60,6 +66,7 @@ services:
       - /home/sotiris/Projects/uniclient/sys/api:/data
     ports:
       - 9000:80
+    restart: unless-stopped
   test_client_api:
     image: registry.sexycoders.org/master-api:1
     container_name: 202979fda92402efd25f47c0f4176a74-api
@@ -69,6 +76,7 @@ services:
       - /home/sotiris/Projects/uniclient/usr/api:/data
     expose:
       - 80
+    restart: unless-stopped
 networks:
   master:
     name: master
