--- a/var/www/package.json
+++ b/var/www/package.json
@@ -61,6 +61,7 @@
     "pdfmake": "^0.2.4",
     "vue": "^3.2.23",
     "vue-good-table-next": "^0.2.1",
+    "vue-meta": "^3.0.0-alpha.2",
     "vue-router": "^4.0.12",
     "vue-sweetalert2": "^5.0.5",
     "vuex": "^4.0.2"
