--- a/sys/mailer/composer.json
+++ b/sys/mailer/composer.json
@@ -1,5 +1,8 @@
 {
-    "require": {
-        "phpmailer/phpmailer": "^6.6"
-    }
+	"require": {
+		"slim/slim": "3.*",
+		"eko3alpha/slim-cors-middleware": "^1.1",
+		"mongodb/mongodb": "^1.8",
+		"phpmailer/phpmailer": "^6.6"
+	}
 }
