--- a/cloud/compose.yml
+++ b/cloud/compose.yml
@@ -3,11 +3,10 @@ version: '3'
 services:
   db:
     image: mariadb
-    container_name: nextcloud-mariadb
     networks:
       - nextcloud_network
     volumes:
-      - /srv/next-cloud-dev/data:/var/lib/mysql
+      - /data/sys/cloud/data:/var/lib/mysql
       - /etc/localtime:/etc/localtime:ro
     environment:
       - MYSQL_ROOT_PASSWORD=toor
@@ -18,25 +17,19 @@ services:
   
   app:
     image: nextcloud:latest
-    container_name: nextcloud-app
     networks:
       - nextcloud_network
-    ports:
-      - 48989:80
     volumes:
-      - /srv/next-cloud-dev/app:/var/www/html
-      - ./app/config:/var/www/html/config
-      - ./app/custom_apps:/var/www/html/custom_apps
-      - ./app/data:/var/www/html/data
-      - ./app/themes:/var/www/html/themes
+      - /data/sys/cloud/app:/var/www/html
+      - /data/sys/cloud/app/config:/var/www/html/config
+      - /data/sys/cloud/app/custom_apps:/var/www/html/custom_apps
+      - /data/sys/cloud/app/data:/var/www/html/data
+      - /data/sys/cloud/app/themes:/var/www/html/themes
       - /etc/localtime:/etc/localtime:ro
     environment:
-      - VIRTUAL_HOST=nextcloud.localhost
-      - LETSENCRYPT_HOST=nextcloud.localhost
-      - LETSENCRYPT_EMAIL=sotiris@sexycoders.org
+      - VIRTUAL_HOST=cloud.sexycoders.org
     restart: unless-stopped
 
 networks:
   nextcloud_network:
-    name: nextcloud_network
 
